src/style.css
@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  font-family: "Poppins", "sans-serif";
}

.text-gradient {
  background: linear-gradient(
    110deg,
    #ffd800 25.25%,
    #f50269 59.3%,
    #9a33ae 76.55%
  );
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}
/* Mobile sidebar */
.mobile-sidebar {
  position: fixed;
  top: 0;
  left: 0;
  width: 80%;
  max-width: 300px;
  height: 100vh;
  background-color: white;
  z-index: 9999;
  transform: translateX(-100%);
  transition: transform 0.3s ease;
  overflow-y: auto;
  box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1);
}

.mobile-sidebar.open {
  transform: translateX(0);
}

.sidebar-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.5);
  z-index: 10;
  opacity: 0;
  visibility: hidden;
  transition: opacity 0.3s ease;
}

.sidebar-overlay.active {
  opacity: 1;
  visibility: visible;
}

.mobile-menu-items a {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 15px;
  text-decoration: none;
  font-size: 16px;
}

/* Search bar */
.mobile-search {
  padding: 15px;
  border-top: 1px solid #f0f0f0;
}

/* Search overlay */
.search-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  background-color: white;
  z-index: 40;
  transform: translateY(-100%);
  transition: transform 0.3s ease;
  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
}

.search-overlay.open {
  transform: translateY(0);
}

.search-container {
  display: flex;
  align-items: center;
  padding: 15px;
}

.search-overlay-input {
  flex: 1;
  border: none;
  outline: none;
  padding: 10px;
  font-size: 16px;
}

.dropdown-panel {
  position: absolute;
  top: 80%;
  z-index: 50;
  left: 0;
  background-color: white;
  border: 1px solid #e5e7eb;
  border-radius: 0.5rem;
  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1),
    0 4px 6px -2px rgba(0, 0, 0, 0.05);

  /* Animation properties */
  opacity: 0;
  visibility: hidden;
  transform: translateY(-10px);

  transition: opacity 0.3s ease, transform 0.3s ease, visibility 0.3s ease;
}

.dropdown-panel.show {
  opacity: 1;
  visibility: visible;
  transform: translateY(0);
}

.dropdown-content {
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.3s ease-out;
}

.arrow-icon-dropdown {
  transition: transform 0.3s ease;
}

.arrow-icon-dropdown.rotate {
  transform: rotate(180deg);
}

.dropdown-content.open {
  max-height: 1451px;
  /* Adjust based on your content */
  transition: max-height 0.5s ease-in;
}

.arrow-change path {
  fill: white;
}

.suggestions {
  border-top: none;
  display: none;
}

/* Custom Scrollbar */
.custom-scrollbar::-webkit-scrollbar {
  width: 5px;
  height: 8px;
}

.custom-scrollbar::-webkit-scrollbar-track {
  background: #f1f1f1;
  border-radius: 9999px;
}

.custom-scrollbar::-webkit-scrollbar-thumb {
  background: #888;
  border-radius: 9999px;
}
.custom-gradient {
  background: linear-gradient(
    110deg,
    #9a33ae 6.13%,
    #f50269 76.3%,
    #f47d41 99.4%
  );
}

@media screen and (min-width: 1280px) {
  .custom-gradient {
    background: none !important;
  }
}
.shops-in-wydawalidobrze {
  @apply xl:text-base text-sm font-light text-white hover:text-primary transition-all duration-200 ease-in-out w-fit cursor-pointer;
}
.main-container {
  @apply max-w-[1315px] 3xl:max-w-[1561px] mx-auto px-4;
}
.primary-container {
  @apply 3xl:max-w-[1593px] max-w-[1350px] mx-auto px-4;
}
.artical-container {
  @apply cursor-pointer flex items-center gap-8 py-6 px-9 h-[100px] hover:shadow-[5px_8px_20px_0px_rgba(132,78,213,0.20)] hover:bg-white rounded-lg transition-all duration-200 ease-in-out;
}
.product-card {
  @apply bg-white rounded-[20px] shadow-[0px_5px_20px_0px_rgba(132,78,213,0.08)] px-3 3xl:px-[14px] py-6 h-full flex flex-col justify-between relative overflow-hidden space-y-2 md:space-y-5;
}
.product-name {
  @apply text-exodusFruit text-xl sm:text-2xl 2xl:text-[26px] 3xl:text-3xl font-bold text-start md:text-center mb-2.5 leading-[130%] break-words;
}
.product-descriptions {
  @apply text-[11px] sm:text-sm font-light text-lightblack leading-[120%] text-start md:text-center;
}
.product-tag {
  @apply text-lightblack text-base font-light md:pt-2.5 leading-[120%] text-center block md:hidden;
}
.product-tag-mobile {
  @apply text-lightblack text-base font-light pt-2.5 leading-[120%] text-center md:block hidden;
}
.primary-button {
  @apply hover:shadow-[2px_2px_6px_0px_rgba(70,70,70,0.25)]  cursor-pointer gap-2 rounded-3xl px-6 py-3 h-[40px] flex justify-center items-center w-full text-white text-center bg-secondry transition-all duration-200 ease-in-out;
}
.product-footer-text {
  @apply text-[11px] font-light text-lightblack leading-[218.182%];
}
.product-card-img {
  @apply max-w-[98px] md:max-w-full md:max-h-[250px] max-h-[90px] h-full object-cover;
}
.only-with-us {
  @apply text-xs leading-[66.667%] font-bold text-lightblack text-center absolute rotate-45 bg-schoolBus w-[167px] -right-[48px] left-[173px] py-2.5 drop-shadow-c1;
}

